# distrib

./: .gitignore  CMakeLists.txt  child.c  child.h  cs.c  io.c  io.h  ipc.c  local_state.c  local_state.h  logger.c  logger.h  main.c  parent.c  parent.h
